# benchstreet

./: .gitignore  README.md  pyproject.toml
benchstreet/: main.py  requirements.txt  util.py
benchstreet/arima/: recursive.py
benchstreet/chronos/: baseline.py  chronos-t5-small.yaml  fine_tune.ipynb
benchstreet/cnn/: recursive.py  vector.py
benchstreet/data/: sine.csv  sp500.csv  sp500_prices.csv
benchstreet/fbprophet/: direct.py
benchstreet/gru/: recursive.py  vector.py
benchstreet/lstm/: encdec.py  recursive.py  vector.py
benchstreet/mlp/: recursive.py  vector.py
benchstreet/n_beats/: direct.py
benchstreet/sarimax/: direct.ipynb  direct.py
benchstreet/tcn/: direct.py
benchstreet/timesfm/: baseline.py  fine_tune.ipynb  fine_tune.py
